# Tracking-Anything-with-DEVA

./: .gitignore  README.md  pyproject.toml
demo/: demo_automatic.py  demo_gradio.py  demo_with_text.py
deva/: __init__.py  train.py
deva/dataset/: static_dataset.py  utils.py  vos_dataset.py
deva/ext/: automatic_processor.py  automatic_sam.py  ext_eval_args.py  grounding_dino.py  with_text_processor.py
deva/ext/LightHQSAM/: setup_light_hqsam.py
deva/ext/MobileSAM/: setup_mobile_sam.py  tiny_vit_sam.py
deva/ext/SAM/: automatic_mask_generator.py
deva/inference/: consensus_associated.py  consensus_automatic.py  demo_utils.py  eval_args.py  frame_utils.py  image_feature_store.py  inference_core.py  kv_memory_store.py  memory_manager.py  object_info.py  object_manager.py  object_utils.py  postprocess_unsup_davis17.py  result_utils.py  segment_merging.py
deva/inference/data/: detection_video_reader.py  referring_test_datasets.py  saliency_test_datasets.py  simple_video_reader.py  video_reader.py  vos_test_datasets.py  vps_test_datasets.py
deva/model/: big_modules.py  group_modules.py  losses.py  memory_utils.py  modules.py  network.py  trainer.py
deva/utils/: burst_test.txt  burst_val.txt  configuration.py  image_saver.py  load_subset.py  log_integrator.py  logger.py  pano_utils.py  referring-youtubevos-val.txt  tensor_utils.py  vipseg_categories.py
deva/vps_metrics/: README.md  eval_stq_vipseg.py  eval_vpq_vipseg.py  segmentation_and_tracking_quality.py  stuff_merging.py
docs/: CUSTOM.md  DEMO.md  EVALUATION.md  TRAINING.md  index.html  style.css
evaluation/: eval_ref_davis.py  eval_ref_youtubevos.py  eval_saliency.py  eval_vos.py  eval_with_detections.py
example/vipseg/source/12_1mWNahzcsAc/: 00001255.json  00001258.json  00001261.json  00001264.json
scripts/: download_datasets.py  download_models.sh  merge_burst_json.py  merge_multi_scale.py
scripts/vipseg/: change2_720p.py  create_panoptic_video_labels.py
